--- a/static/form.html
+++ b/static/form.html
@@ -6,8 +6,12 @@
     <body>
         <div>
             <form method="POST" action="/form">
-                <label for="name">Name</label><input type="text" name="name" value="">
-                <label for="name">Address</label><input type="text" name="address" value="">
+                <label for="name">Name: </label>
+                <input type="text" name="name" value="">
+                <br>
+                <label for="name">Address: </label>
+                <input type="text" name="address" value="">
+                <br>
                 <input type="submit" value="Submit">
             </form>
         </div>
